--- a/roles/i3-setup/files/i3.config
+++ b/roles/i3-setup/files/i3.config
@@ -73,7 +73,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
@@ -156,4 +156,4 @@ gaps outer 5
 exec_always --no-startup-id /usr/bin/polybar
 bindsym $mod+Shift+z exec --no-startup-id ~/Scripts/poweroff.sh
 bindsym $mod+Shift+a exec --no-startup-id ~/Scripts/startvm.sh
-
+bindsym $mod+e exec --no-startup-id /usr/bin/pcmanfm
